--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,11 @@
 	<url>http://www.example.com</url>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
-	</properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source> <!-- Updated to 1.8 -->
+    <maven.compiler.target>1.8</maven.compiler.target> <!-- Updated to 1.8 -->
+</properties>
+
 
 	<dependencies>
 		<dependency>
@@ -27,10 +28,11 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 		<dependency>
-			<groupId>com.aventstack</groupId>
-			<artifactId>extentreports</artifactId>
-			<version>5.1.1</version>
-		</dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.1</version> <!-- Keep this or the other, not both -->
+</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -50,17 +52,13 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.8.0</version>
+			<version>7.10.2</version>
 
 		</dependency>
 
 
 		<!-- Extent Reports -->
-		<dependency>
-			<groupId>com.aventstack</groupId>
-			<artifactId>extentreports</artifactId>
-			<version>5.0.9</version>
-		</dependency>
+	
 
 		<!-- WebDriverManager -->
 		<!--
@@ -131,5 +129,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		
 	</build>
 </project>
