--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,18 @@
 					<resultsDirectory>${project.basedir}/allure-results</resultsDirectory>
 				</configuration>
 			</plugin>
+			
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+            <source>11</source>
+            <target>11</target>
+        </configuration>
+    </plugin>
+
+
 		</plugins>
 		
 	</build>
