--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,5 +2,6 @@ browser=chrome
 urlArieh=http://10.212.87.140:8093/
 usernameArieh=avisurya1
 passwordArieh=OctNov@2024#
-
+emailid=bcd@abc.com
+mobilenumber=9811111111
 #############################################################
